@@ -66,6 +66,8 @@ static const unsigned char tpi_skey[] = { 0x12, 0x89, 0xAB, 0x45, 0xCD, 0xD8, 0x
 #define TPI_NVMCMD_SECTION_ERASE	0x14
 #define TPI_NVMCMD_WORD_WRITE		0x1D
 
+static const unsigned char tpi_skey_cmd[] = { TPI_CMD_SKEY, 0xff, 0x88, 0xd8, 0xcd, 0x45, 0xab, 0x89, 0x12 };
+
 #ifdef __cplusplus
 }
 #endif
